--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/style-index.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Appliance Repair - Book Today">
   <div class="full-index">
     <div class="full-index-1920">
@@ -21,7 +23,8 @@ import "css/style-index.css";
         <div
           class="full-commercial-machinery"
           id="full-commercial-machinery-nocolor">
-          <div class="full-commercial-machinery-1920  first-element-without-indentation">
+          <div
+            class="full-commercial-machinery-1920 first-element-without-indentation">
             <div class="header-machinery">
               <h2>
                 Same Day Household Appliance Repair, Installation, and
@@ -904,49 +907,48 @@ import "css/style-index.css";
         <Features />
 
         <div class="finish-index">
-
-        <h2>
-          Same Day Appliance Repair Services for Commercial & Household Use in
-          Los Angeles and Surrounding Areas
-        </h2>
-        <p>
-          Welcome to the Same Day Appliance Repair - your destination for all
-          your commercial and household appliance repair needs! We pride
-          ourselves on being a trusted business, serving our valued customers
-          since 2007. We deliver professional appliance repair services, that
-          you can rely on with confidence. Over the years, we have helped
-          thousands of customers, alleviating the stress that comes when
-          appliances malfunction. Our quick response time and efficient work
-          ethic form the cornerstone of our operational approach, aiming to
-          resolve your appliance issues promptly and proficiently.
-        </p>
-        <p>
-          To guarantee a high quality service, we have invested significantly in
-          the continual education and training of our skilled technicians.
-          Additionally, we maintain a comprehensive inventory of appliance
-          parts, enabling us to tackle a majority of repair challenges in a
-          single visit.
-        </p>
-        <p>
-          Our range of expertise encompasses appliance diagnostics, appliance
-          maintenance, appliance repair, and appliance installation services,
-          covering a diverse array of residential and commercial appliances
-          across Orange County, CA. Whether it's refrigerators, freezers, ice
-          makers, washers, dryers, ranges, stoves, ovens, cook-tops, wine
-          coolers, microwaves, dishwashers, garbage disposals, or BBQs, we have
-          you covered.
-        </p>
-        <p>
-          We work with all brands, including but not limited to Samsung,
-          Whirlpool, KitchenAid, Bosch, Frigidaire, Maytag, Sub-Zero, Subzero,
-          Kenmore, General Electric, GE, LG, Liebherr, JennAir, Dacor,
-          Thermador, Fisher & Paykel, Viking, Whirlpool, Whirlpool, and numerous
-          others. With Same Day Appliance Repair, you can trust that your
-          appliances are in capable hands. Appliance repair is our expertise,
-          entrusted to our team of skilled professionals. With extensive
-          experience under their belt, our technicians deliver the highest
-          quality repair service.
-        </p>
+          <h2>
+            Same Day Appliance Repair Services for Commercial & Household Use in
+            Los Angeles and Surrounding Areas
+          </h2>
+          <p>
+            Welcome to the Same Day Appliance Repair - your destination for all
+            your commercial and household appliance repair needs! We pride
+            ourselves on being a trusted business, serving our valued customers
+            since 2007. We deliver professional appliance repair services, that
+            you can rely on with confidence. Over the years, we have helped
+            thousands of customers, alleviating the stress that comes when
+            appliances malfunction. Our quick response time and efficient work
+            ethic form the cornerstone of our operational approach, aiming to
+            resolve your appliance issues promptly and proficiently.
+          </p>
+          <p>
+            To guarantee a high quality service, we have invested significantly
+            in the continual education and training of our skilled technicians.
+            Additionally, we maintain a comprehensive inventory of appliance
+            parts, enabling us to tackle a majority of repair challenges in a
+            single visit.
+          </p>
+          <p>
+            Our range of expertise encompasses appliance diagnostics, appliance
+            maintenance, appliance repair, and appliance installation services,
+            covering a diverse array of residential and commercial appliances
+            across Orange County, CA. Whether it's refrigerators, freezers, ice
+            makers, washers, dryers, ranges, stoves, ovens, cook-tops, wine
+            coolers, microwaves, dishwashers, garbage disposals, or BBQs, we
+            have you covered.
+          </p>
+          <p>
+            We work with all brands, including but not limited to Samsung,
+            Whirlpool, KitchenAid, Bosch, Frigidaire, Maytag, Sub-Zero, Subzero,
+            Kenmore, General Electric, GE, LG, Liebherr, JennAir, Dacor,
+            Thermador, Fisher & Paykel, Viking, Whirlpool, Whirlpool, and
+            numerous others. With Same Day Appliance Repair, you can trust that
+            your appliances are in capable hands. Appliance repair is our
+            expertise, entrusted to our team of skilled professionals. With
+            extensive experience under their belt, our technicians deliver the
+            highest quality repair service.
+          </p>
 
           <h2>Ensuring Compatibility and Performance</h2>
           <p>
@@ -962,9 +964,6 @@ import "css/style-index.css";
             with the manufacturer's design, we ensure that your refrigerator
             continues to operate as efficiently as on the day you bought it.
           </p>
-
-
-
 
           <h2>
             How to Schedule Same-Day Appointment For Appliance Repair in Los
@@ -1011,11 +1010,9 @@ import "css/style-index.css";
             different, ranging from a basic issue like a malfunctioning outlet
             to more complex problems like a faulty compressor.
           </p>
-        
         </div>
-
       </div>
     </div>
   </div>
   <Cta />
-</Layout>
+</reviews>
