--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,10 +1,13 @@
 ---
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
+import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="404 Not Found">
   <Container>
     <div class="min-h-[calc(100vh-16rem)] flex items-center justify-center">
@@ -15,3 +18,4 @@ import Navbar from "@components/navbar/navbar.astro";
     </div>
   </Container>
 </Layout>
+<Cta />
