--- a/src/pages/areas/culver-city.astro
+++ b/src/pages/areas/culver-city.astro
@@ -6,11 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Appliance Repair Culver City">
   <Container>
     <div class="content">
@@ -101,22 +103,22 @@ import "css/service-areas/style-service-areas.css";
       </div>
       &bull; Detailed Written Estimates
     </div>
-    &bull; Exclusive Use of Genuine Factory Parts</Container
-  >
-  <h2>Appliances We Repair:</h2>
-  <p>&bull; Refrigerators</p>
-  &bull; Freezers</Layout
->
-&bull; Ice Makers and Ice Machines &bull; Ovens &bull; Ranges &bull; Cook-Tops &bull;
-Dishwashers &bull; Washers &bull; Dryers &bull; Microwaves &bull; Garbage Disposals
-&bull; Wine Coolers &bull; BBQs &bull; and more!
-<h2>Appliance Brands We Repair:</h2>
-<p>&bull; Admiral</p>
-&bull; Amana &bull; Black & Decker &bull; Bosch &bull; Dacor &bull; Electrolux &bull;
-Fisher & Paykel &bull; Frigidaire &bull; Gaffers And Sattler &bull; General Electric/GE
-&bull; Jenn-Air &bull; Kenmore &bull; KitchenAid &bull; LG &bull; Maytag &bull; Miele
-&bull; Montgomery Ward &bull; O’Keefe & Merritt &bull; Samsung &bull; Sears &bull;
-Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador &bull; Traulsen &bull;
-Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf &bull; And Others!
-<div></div>
+    &bull; Exclusive Use of Genuine Factory Parts
+    <h2>Appliances We Repair:</h2>
+    <p>&bull; Refrigerators</p>
+    &bull; Freezers
+    &bull; Ice Makers and Ice Machines &bull; Ovens &bull; Ranges &bull; Cook-Tops &bull;
+    Dishwashers &bull; Washers &bull; Dryers &bull; Microwaves &bull; Garbage Disposals
+    &bull; Wine Coolers &bull; BBQs &bull; and more!
+    <h2>Appliance Brands We Repair:</h2>
+    <p>&bull; Admiral</p>
+    &bull; Amana &bull; Black & Decker &bull; Bosch &bull; Dacor &bull; Electrolux &bull;
+    Fisher & Paykel &bull; Frigidaire &bull; Gaffers And Sattler &bull; General Electric/GE
+    &bull; Jenn-Air &bull; Kenmore &bull; KitchenAid &bull; LG &bull; Maytag &bull; Miele
+    &bull; Montgomery Ward &bull; O’Keefe & Merritt &bull; Samsung &bull; Sears &bull;
+    Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador &bull; Traulsen &bull;
+    Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf &bull; And Others!
+    <div></div>
+  </Container>
+</Layout>
 <Cta />
