--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -7,11 +7,13 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Appliance Repair Los Angeles">
   <Container>
     <div class="content">
@@ -408,7 +410,8 @@ import "css/service-areas/style-service-areas.css";
               <a
                 title="Commercial Refrigerator Repair Los Angeles"
                 href="/services/commercial-refrigerator-repair-los-angeles"
-                >Refrigerator Repair</a>
+                >Refrigerator Repair</a
+              >
             </p>
             <a
               class="grid-a"
@@ -1013,7 +1016,7 @@ import "css/service-areas/style-service-areas.css";
           cover the repair costs.
         </p>
       </div>
-      <Cta />
     </div>
-  </Container></Layout
->
+  </Container>
+</Layout>
+<Cta />
