--- a/src/pages/areas/pasadena/washing-machine-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/washing-machine-repair-pasadena.astro
@@ -6,6 +6,7 @@ import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -29,6 +30,7 @@ import "css/service-areas/style-service-areas.css";
 </script>
 
 <Navbar />
+<Reviews />
 <Layout title="Washing Machine Repair”, Pasadena">
   <Container>
     <main>
@@ -1296,6 +1298,6 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
         </div>
       </div>
     </div>
-    <Cta />
   </Container>
 </Layout>
+<Cta />
