--- a/src/pages/price-list/appliance-reapir-cost.astro
+++ b/src/pages/price-list/appliance-reapir-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Appliance REpair Price List">
   <Container>
     <main>
@@ -50,7 +52,7 @@ import Navbar from "@components/navbar/navbar.astro";
           >Lg Dryer Repair Cost</a
         >
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
