--- a/src/pages/price-list/dryer-idler-pulley-replacement-cost.astro
+++ b/src/pages/price-list/dryer-idler-pulley-replacement-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Idler Pulley Replacement Cost">
   <Container>
     <main>
@@ -106,8 +108,8 @@ import Navbar from "@components/navbar/navbar.astro";
           services.
         </p>
 
-        <Cta />
       </p>
     </main>
-  </Container></Layout
->
+  </Container>
+</Layout>
+  <Cta />
