--- a/src/pages/price-list/dryer-motor-replacement-cost.astro
+++ b/src/pages/price-list/dryer-motor-replacement-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Motor Replacement Cost">
   <Container>
     <main>
@@ -94,7 +96,7 @@ import Navbar from "@components/navbar/navbar.astro";
         and choosing the right service or approach for replacement, you can
         ensure your dryer continues to operate effectively for years to come.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
