--- a/src/pages/price-list/dryer-roller-replacement-cost.astro
+++ b/src/pages/price-list/dryer-roller-replacement-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Roller Replacement Cost">
   <Container>
     <main>
@@ -103,7 +105,7 @@ import Navbar from "@components/navbar/navbar.astro";
         professional roller replacement services.
       </p>
 
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
