--- a/src/pages/price-list/dryer-thermal-fuse-replacement-cost.astro
+++ b/src/pages/price-list/dryer-thermal-fuse-replacement-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Thermal Fuse Replacement Cost">
   <Container>
     <main>
@@ -118,7 +120,7 @@ import Navbar from "@components/navbar/navbar.astro";
         working order efficiently and safely.
       </p>
 
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
