--- a/src/pages/price-list/dryer-vent-installation-cost.astro
+++ b/src/pages/price-list/dryer-vent-installation-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Vent Installation Cost">
   <Container>
     <main>
@@ -167,7 +169,7 @@ import Navbar from "@components/navbar/navbar.astro";
         installation appointment. Trust us for reliable and cost-effective dryer
         vent installation services.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
