--- a/src/pages/price-list/dryer-vent-repair-cost.astro
+++ b/src/pages/price-list/dryer-vent-repair-cost.astro
@@ -7,9 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Vent Repair Cost">
   <Container>
     <main>
@@ -103,7 +105,7 @@ import Navbar from "@components/navbar/navbar.astro";
         schedule a convenient repair appointment. Trust us to restore your dryer
         vent to optimal condition, ensuring safe and efficient operation.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
