--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -7,11 +7,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 ---
 
-
-
 <Navbar />
+<Reviews />
 <Layout title="LG Dryer Repair Cost">
   <Container>
     <main>
@@ -319,7 +319,7 @@ import Navbar from "@components/navbar/navbar.astro";
         commitment to customer satisfaction. Don't hesitate to call us to
         restore your LG dryer to optimal condition.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
