--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Washing Machine Repair">
   <Container>
     <main>
@@ -65,7 +67,8 @@ import "css/service/style_services.css";
       </div>
       <h2 style="text-align: start">
         <strong
-          >Benefits of Our Washing Machine Repair Services in Los Angeles, CA</strong>
+          >Benefits of Our Washing Machine Repair Services in Los Angeles, CA</strong
+        >
       </h2><h3>
         Our Los Angeles Appliance Repair Company Offers Same Day Washing Machine
         Repair Service
@@ -83,13 +86,15 @@ import "css/service/style_services.css";
       </p><h3 style="text-align: start">
         <strong
           >Complementary Free-of-Charge Condenser Coil Cleaner During Freezer
-          Repair</strong>
+          Repair</strong
+        >
       </h3><p style="text-align: start">
         Every freezer repair comes with free-of-charge condenser coil cleaning
         to improve the longevity of the freezer.
       </p><h3 style="text-align: start">
         <strong
-          >We Employ Only Expert Appliance Repair Technicians in Los Angeles</strong>
+          >We Employ Only Expert Appliance Repair Technicians in Los Angeles</strong
+        >
       </h3><p style="text-align: start">
         Each of our appliance repair technicians is fully certified in safe
         freezer handling and adept at quickly pinpointing the cause of any
@@ -109,7 +114,8 @@ import "css/service/style_services.css";
           >affordable pricing</strong
         >, <strong>genuine replacement parts</strong>, <strong>warranty</strong
         >, <strong>customer satisfaction</strong>, <strong
-          >environmental responsibility.</strong>
+          >environmental responsibility.</strong
+        >
       </p><p style="text-align: start">
         Experience the peace of mind that comes with knowing your washing
         machine repair needs are handled by the business's best. With our expert
@@ -306,7 +312,8 @@ import "css/service/style_services.css";
               data-color="var(--blue-10)"
               style="background-color: var(--blue-10); color: inherit"
               >Washine machine Repair Expertise Across All LA Locations</span
-            ></strong>
+            ></strong
+          >
         </h2><p style="text-align: start">
           Our skilled washing machine repair technicians have extensive
           experience in servicing and maintaining washine machines from leading
@@ -328,12 +335,13 @@ import "css/service/style_services.css";
             Del Rey, Playa Del Rey, Venice, Culver City, Westdale, West Los
             Angeles, Northeast, Westwood, Ladera Heights, Bel Air, Beverly Glen,
             South Beverly Park, Trousdale Estates, The Bird Streets Beverly
-            Ridge Estates, Holmby Hills.</strong>
+            Ridge Estates, Holmby Hills.</strong
+          >
         </p>
 
         <!-- Add more accordion items as needed -->
       </div>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
