--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -6,11 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Appliance Repair - Marina Del Rey: (424) 325-0520">
   <Container>
     <div class="category category-0" style="background-color:#ffffff;">
@@ -173,9 +175,9 @@ import "css/service-areas/style-service-areas.css";
               Repair Service in Marina Del Rey
             </p>
           </p>
-          <Cta />
         </div>
       </div>
-    </div></Container
-  ></Layout
->
+    </div>
+  </Container>
+</Layout>
+<Cta />
