--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -6,11 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Appliance Repair Santa Monica: (424) 325-0520">
   <Container>
     <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
@@ -108,8 +110,6 @@ import "css/service-areas/style-service-areas.css";
     &bull; Sears &bull; Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador
     &bull; Traulsen &bull; Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf
     &bull; And Others!
-
-    <Cta />
   </Container>
-  </Layout
->
+</Layout>
+<Cta />
