--- a/src/pages/brands/commercial-and-household.astro
+++ b/src/pages/brands/commercial-and-household.astro
@@ -6,11 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Appliance Repair - We Fix All Brands: (424) 325-0520">
   <Container>
     <div class="content">
@@ -95,6 +97,6 @@ import "css/service/style_services.css";
         </p>
       </h2>
     </div>
-    <Cta />
   </Container>
 </Layout>
+<Cta />
