--- a/src/pages/price-list/dishwasher-repair-cost.astro
+++ b/src/pages/price-list/dishwasher-repair-cost.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Dishwasher Replacement Cost">
   <Container>
     <main>
@@ -637,7 +639,7 @@ import "css/price/style_price.css";
         saving you money on utility bills and offering better performance.
       </p>
 
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
