--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -3,12 +3,13 @@ import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
 import Btn from "@components/btn.astro";
 import Contactbtn from "@components/contactbtn.astro";
-// import Features from "@components/features.astro";
-// import Hero from "@components/hero.astro";
-// import Logos from "@components/logos.astro";
+import Features from "@components/features.astro";
+import Hero from "@components/hero.astro";
+import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
 ---
@@ -32,6 +33,7 @@ import "css/price/style_price.css";
 </script>
 
 <Navbar />
+<Reviews />
 <Layout title="Dryer Repair Cost">
   <Container>
     <main>
@@ -1648,6 +1650,6 @@ import "css/price/style_price.css";
       </div>
     </main>
 
-    <Cta />
   </Container>
 </Layout>
+<Cta />
