--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -6,6 +6,7 @@ import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
 ---
@@ -29,6 +30,7 @@ import "css/price/style_price.css";
 </script>
 
 <Navbar />
+<Reviews />
 <Layout title="Oven Repair Cost">
   <Container>
     <main>
@@ -1459,7 +1461,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
