--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -6,6 +6,7 @@ import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
 ---
@@ -29,6 +30,7 @@ import "css/price/style_price.css";
 </script>
 
 <Navbar />
+<Reviews />
 <Layout title="Water Heater Repair Cost">
   <Container>
     <main>
@@ -37,7 +39,7 @@ import "css/price/style_price.css";
       <div class="two-col-grid">
         <div class="col-one">
           <img
-          loading="lazy"
+            loading="lazy"
             width="500px"
             height="500px"
             src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
@@ -1576,7 +1578,6 @@ import "css/price/style_price.css";
         <div class="FAQ_bottom"></div>
       </div>
     </main>
-
-    <Cta />
   </Container>
 </Layout>
+<Cta />
