--- a/src/pages/services/commercial-dishwasher-repair.astro
+++ b/src/pages/services/commercial-dishwasher-repair.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Commercial Dishwasher Repair: Call: (424) 325-0520">
   <Container>
     <main>
@@ -344,6 +346,7 @@ import "css/service/style_services.css";
           </p>
         </li>
       </ul><p></p>
-    </main></Container
-  ></Layout
->
+    </main>
+  </Container>
+</Layout>
+<Cta />
