--- a/src/pages/services/commercial-dryer-repair.astro
+++ b/src/pages/services/commercial-dryer-repair.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Commercial Dryer Repair: Call: (424) 325-0520">
   <Container>
     <main>
@@ -261,7 +263,7 @@ import "css/service/style_services.css";
         repairs that boost efficiency, extend your equipment's life, and support
         your business's continuous effectiveness.
       </p><h2></h2>
-      <Cta />
     </main>
-  </Container></Layout
->
+  </Container>
+  </Layout>
+  <Cta />
