--- a/src/pages/services/commercial-freezer-repair.astro
+++ b/src/pages/services/commercial-freezer-repair.astro
@@ -7,10 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
+
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Commercial Freezer Repair Call: (424) 325-0520">
   <Container>
     <main>
@@ -63,7 +66,8 @@ import "css/service/style_services.css";
       </p>
       <h2>
         <strong
-          >Trustworthy Commercial Freezer Services in Los Angeles, CA</strong>
+          >Trustworthy Commercial Freezer Services in Los Angeles, CA</strong
+        >
       </h2><p style="text-align: start">
         Los Angeles enterprises depend on robust commercial freezing solutions
         to preserve product freshness and safety. Our localized repair services
@@ -87,7 +91,8 @@ import "css/service/style_services.css";
         serve the Los Angeles area.
       </p><h2>
         <strong
-          >Your Local Commercial Freezer Repair Solution in Los Angeles</strong>
+          >Your Local Commercial Freezer Repair Solution in Los Angeles</strong
+        >
       </h2><p style="text-align: start">
         Looking for "commercial freezer repair near me" in Los Angeles? You've
         found us. Our proximity means we're always ready to address your freezer
@@ -299,7 +304,7 @@ import "css/service/style_services.css";
         deserve. Our team is equipped to provide top-notch repairs that boost
         efficiency, prolong equipment life, and keep your business at its peak.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
