--- a/src/pages/services/dryer-repair.astro
+++ b/src/pages/services/dryer-repair.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Dryer Repair">
   <Container>
     <main>
@@ -62,8 +64,8 @@ import "css/service/style_services.css";
         </div>
       </div>
       <h3 style="text-align: start">
-        <strong
-          >Benefits of Our Dryer Repair Services in Los Angeles, CA</strong>
+        <strong>Benefits of Our Dryer Repair Services in Los Angeles, CA</strong
+        >
       </h3>
       <ul>
         <li>
@@ -218,7 +220,7 @@ import "css/service/style_services.css";
         for our customers, ensuring they understand the benefits and scope of
         our dryer repair services in Los Angeles.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
