--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Microwave Repair">
   <Container>
     <main>
@@ -209,7 +211,7 @@ import "css/service/style_services.css";
         benefits and ensuring our customers are well-informed about our
         wide-ranging offerings."
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
