--- a/src/pages/services/range-hood-repair.astro
+++ b/src/pages/services/range-hood-repair.astro
@@ -7,11 +7,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
+<Reviews />
 <Layout title="Same Day Range Hood Range Repair">
   <Container>
     <main>
@@ -112,7 +114,7 @@ import "css/service/style_services.css";
         advantages and ensuring our customers are fully informed about our
         extensive offerings.
       </p>
-      <Cta />
     </main>
   </Container>
 </Layout>
+<Cta />
