--- a/src/components/css-components/reviews.css
+++ b/src/components/css-components/reviews.css
@@ -11,6 +11,10 @@
     cursor: pointer;
 }
 
+.reviews-header {
+    margin-top: -3px;
+}
+
 .reviews-header a {
     color: #fff;
     transition: 0.25s;
